# email-triage-final2

./: README.md  openenv.yaml  pyproject.toml  requirements.txt
env/: main.py
env/server/: app.py
server/: app.py
